[gd_scene load_steps=2 format=3 uid="uid://bexuvvfk3kpky"]

[ext_resource type="Script" uid="uid://bfquq7xwa4j1t" path="res://UI-Interact.gd" id="1_r0du0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_r0du0")

[node name="LedgerPage" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 345)
layout_mode = 0
offset_left = 241.0
offset_top = 144.0
offset_right = 912.0
offset_bottom = 489.0
theme_override_constants/separation = 25

[node name="LeftPageScroll" type="ScrollContainer" parent="LedgerPage"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LeftPage" type="VBoxContainer" parent="LedgerPage/LeftPageScroll"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="RightPageScroll" type="ScrollContainer" parent="LedgerPage"]
custom_minimum_size = Vector2(325, 0)
layout_mode = 2

[node name="RightPage" type="VBoxContainer" parent="LedgerPage/RightPageScroll"]
layout_mode = 2
theme_override_constants/separation = 24
